[Feat]: ✨Add cyber security license number

--- a/overrides/partials/copyright.html
+++ b/overrides/partials/copyright.html
@@ -12,8 +12,24 @@
   {% endif %}
   
   <div>
+    <a href="https://beian.mps.gov.cn/#/query/webSearch?code=51200002001101" target="_blank" rel="noopener">
+      <span class="beian-icon">
+        <img src="/assets/copyright/110beian_logo.png" width="16px" height="auto" alt="beian"/>
+      </span>
+      川公网安备51200002001101号
+    </a>
+    &nbsp;&nbsp;|&nbsp;&nbsp;
     <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">
       蜀ICP备2025149866号
     </a>
   </div>
 </div>
+
+<style>
+.beian-icon {
+  display: inline-block;
+  width: 16px;
+  height: 19px;
+  vertical-align: middle;
+}
+</style>
